browser/base/content/browser-floorp.css
/* ... */
#workspaces-toolbar-button:hover {
  background-color: var(--toolbarbutton-hover-background) !important;
}
#workspaces-toolbar-button[open="true"],
#workspaces-toolbar-button:hover:active {
  background-color: var(--toolbarbutton-active-background) !important;
}
#workspaces-toolbar-button[showlabel="true"] > label {
  display: inherit !important;
}

toolbarpaletteitem #workspaces-toolbar-button[showlabel="true"] > label {
  display: none !important;
}

toolbarpaletteitem #workspaces-toolbar-button > label {
  display: none !important;
}
#workspaces-toolbar-button > * {
  background: unset !important;
  background-color: unset !important;
  background-image: unset !important;
}
.workspaceSeparator {
  margin: 5px 0px !important;
  width: -moz-available;
}
#workspacesCreateNewWorkspaceButton {
  list-style-image: url(chrome://global/skin/icons/plus.svg);
  width: -moz-available;
  border-radius: var(--tab-border-radius);
}
#workspacesCreateNewWorkspaceButton:hover {
  background-color: var(--toolbarbutton-hover-background) !important;
}
#workspacesCreateNewWorkspaceButton:hover:active {
  background-color: var(--toolbarbutton-active-background) !important;
}
#workspacesCreateNewWorkspaceButton > * {
  background: unset !important;
  background-color: unset !important;
  background-image: unset !important;
}
#workspacesCreateNewWorkspaceButton > label {
  display: inherit;
}
#workspacesPopupSeparator {
  margin: 10px 0px !important;
}

/**
 * SplitView Styles
 * @license MPL2.0 : This code inspired by the split view feature in the Zen Browser Thanks to the Zen Browser team!
 * @see https://github.com/zen-browser/desktop/raw/main/src/browser/base/content/ZenViewSplitter.mjs
 */
#split-views-button {
  list-style-image: url("chrome://floorp/skin/designs/lepton/calendar-agenda.svg");
}

.split-view-modifier-preview {
  border: solid 1px var(--toolbar-color);
}

.splitViewSelectItems {
  border: solid 1px var(--toolbar-color);
}

/* Split View */

.browserSidebarContainer {
  flex: 0
}

#tabbrowser-tabpanels[split-view="true"] {
  display: flex;
  flex-direction: row;
}

#tabbrowser-tabpanels[split-view="true"] > *:not([split="true"]) {
  flex: 0;
  margin: 0 !important;
}

#tabbrowser-tabpanels[split-view="true"] > [split="true"] {
  flex: 1;
  margin-right: 5px !important;
}

#tabbrowser-tabpanels:has(> [split="true"]) {
  display: flex;
  flex-direction: row;
}

deck > .deck-selected,
tabpanels > [split="true"] {
  -moz-subtree-hidden-only-visually: 0 !important;
  visibility: visible !important;
}

#splitView-action {
  border-radius: 100px;
  background: var(--button-active-bgcolor);
  margin-left: 3px;
}

#splitView-image {
  list-style-image: url("chrome://floorp/skin/designs/lepton/link.svg");
  fill: var(--button-primary-bgcolor);
}

#splitView-vbox {
  width: 270px;
}

.splitView-title {
  margin: 5px;
  font-weight: bold;
}

#splitView-position-selector {
  display: flex;
  flex-direction: row;
}

.splitView-select-box {
  flex: 1;
  height: 100px;
  border-radius: 5px;
  padding: 5px;
  display: flex;
  flex-direction: column;
  border: 1px solid var(--panel-separator-color);
  margin: 7px;
}

.splitView-select-content-box {
  margin: 5px;
  border-radius: 5px;
  height: 50px;
  flex: 1;
}

.splitView-select-label {
  margin: auto;
  font-size: smaller;
}

.splitView-select-content-box > box {
  flex: 1;
}

.splitView-select-content-box > :nth-child(1) {
  background-color: var(--button-active-bgcolor);
  border-radius: 5px;
}

#splitView-position-selector-content-right {
  flex-direction: row-reverse;
}

#splitView-remove-button {
  margin-top: 10px;
  margin-left: auto;
}

.splitView-select-box.selected {
  border: var(--button-primary-hover-bgcolor) solid 1px;
}

#navigator-toolbox {
  :root[lwtheme] & {
    background-image: var(--lwt-additional-images);
    background-repeat: var(--lwt-background-tiling);
    background-position: var(--lwt-background-alignment);
    color: inherit;
  }
}

